Fixed high priority PMD violations